<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>uk.gov.companieshouse</groupId>
        <artifactId>companies-house-parent</artifactId>
        <version>2.1.11</version>
        <relativePath/>
    </parent>

    <name>order-notification-sender</name>
    <description>Service responsible for sending customer order notification emails</description>
    <artifactId>order-notification-sender</artifactId>
    <version>latest</version>

    <properties>
        <java.version>21</java.version>
        <spring-boot-dependencies.version>3.4.6</spring-boot-dependencies.version>
        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <ch-kafka.version>3.0.3</ch-kafka.version>
        <kafka-models.version>3.0.8</kafka-models.version>
        <structured-logging.version>3.0.20</structured-logging.version>
        <mockito-junit-jupiter-version>5.14.2</mockito-junit-jupiter-version>
        <mockito-inline.version>5.2.0</mockito-inline.version>
        <junit-jupiter.version>5.11.4</junit-jupiter.version>
        <junit-jupiter-engine-version>5.11.4</junit-jupiter-engine-version>
        <private-api-sdk-java.version>4.0.283</private-api-sdk-java.version>
        <api-sdk-manager-java-library.version>3.0.6</api-sdk-manager-java-library.version>
        <testcontainers.version>1.20.4</testcontainers.version>
        <org.hamcrest.version>3.0</org.hamcrest.version>
        <mockserver-client-java>5.15.0</mockserver-client-java>
        <jib-maven-plugin>3.4.4</jib-maven-plugin>
        <avro.version>1.12.0</avro.version>
        <mockito-core.version>5.14.2</mockito-core.version>
        <sonar.exclusions>
            **/config/ApplicationConfig.java,
            **/config/EmailConfiguration.java,
            **/config/EmailDataConfiguration.java,
            **/emailsender/EmailSend.java,
            **/emailsender/EmailSendFailedEvent.java,
            **/emailsender/NonRetryableFailureException.java,
            **/emailsender/SendEmailEvent.java,
            **/emailsendmodel/CertificateAppointmentDetailsModel.java,
            **/emailsendmodel/CertificateOrderNotificationModel.java,
            **/emailsendmodel/DeliveryMethodTuple.java,
            **/emailsendmodel/DocumentOrderNotificationModel.java,
            **/emailsendmodel/FilingHistoryDetailsModel.java,
            **/emailsendmodel/MappingException.java,
            **/emailsendmodel/MissingImageOrderNotificationModel.java,
            **/emailsendmodel/OrderModel.java,
            **/errorhandler/ErrorHandlingFailureException.java,
            **/ordernotificationsender/OrderEnrichmentFailedEvent.java,
            **/ordernotificationsender/SendOrderNotificationEvent.java,
            **/orders/service/OrdersResponseException.java,
            **/orders/service/OrdersServiceException.java,
            **/ordersconsumer/RetryableErrorException.java,
            **/OrderNotificationApplication.java
        </sonar.exclusions>

        <argLine>
            --add-opens java.base/java.util=ALL-UNNAMED
            --add-opens java.base/java.lang=ALL-UNNAMED
        </argLine>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>structured-logging</artifactId>
            <version>${structured-logging.version}</version>
          <exclusions>
            <exclusion>
              <groupId>org.slf4j</groupId>
              <artifactId>*</artifactId>
            </exclusion>
          </exclusions>
            <scope>compile</scope>
        </dependency>

      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-logging</artifactId>
      </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito-junit-jupiter-version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>ch-kafka</artifactId>
            <version>${ch-kafka.version}</version>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>kafka-models</artifactId>
            <version>${kafka-models.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.avro</groupId>
                    <artifactId>avro</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.jetty.http2</groupId>
                    <artifactId>http2-common</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.jetty.http2</groupId>
                    <artifactId>http2-server</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.jetty</groupId>
                    <artifactId>jetty-webapp</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.apache.avro</groupId>
            <artifactId>avro</artifactId>
            <version>${avro.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.kafka</groupId>
                    <artifactId>kafka-streams</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.kafka</groupId>
                    <artifactId>kafka-streams-test-utils</artifactId>
                </exclusion>
                    <exclusion>
                        <groupId>org.pcollections</groupId>
                        <artifactId>pcollections</artifactId>
                    </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-clients</artifactId>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito-core.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>private-api-sdk-java</artifactId>
            <version>${private-api-sdk-java.version}</version>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>api-sdk-manager-java-library</artifactId>
            <version>${api-sdk-manager-java-library.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>javax.servlet</groupId>
                    <artifactId>servlet-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>mockserver</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mock-server</groupId>
            <artifactId>mockserver-client-java</artifactId>
            <version>${mockserver-client-java}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.ethlo.time</groupId>
                    <artifactId>itu</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>${org.hamcrest.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot-dependencies.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${jib-maven-plugin}</version>
                <configuration>
                    <from>
                        <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/ci-corretto-build-21:latest</image>
                    </from>
                    <to>
                        <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/order-notification-sender:latest</image>
                    </to>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
